kubernasty/manifests-old-v1/atmosphere/uptime-kuma/ingresses/uptime-kuma.ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-in
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer-prod
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-clusteradmin-auth-mw@kubernetescrd

spec:
  rules:
  - host: uptime.${clusterTld}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
  tls:
    - secretName: micahrl-dot-me-wildcard-backing-secret
      hosts:
        - uptime.${clusterTld}
